--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -1,2 +1,5 @@
+    
+    </div>
   </body>
+    <script src="/public/js/jquery-1.9.1.min.js" type="text/javascript" charset="utf-8"></script>
 </html>
