--- a/app/views/Users/New.html
+++ b/app/views/Users/New.html
@@ -49,7 +49,7 @@
             </div>
             <div class="control-group">
                 <div class="controls">
-                    <button type="submit" class="btn">Sign in</button>
+                    <button type="submit" class="btn">Sign Up</button>
                 </div>
             </div>
         </form>
