--- a/app/views/share/navbar.html
+++ b/app/views/share/navbar.html
@@ -13,9 +13,17 @@
                     <li><a href="/rooms">Room</a></li>
                 </ul>
                 <ul class="nav pull-right">
+                    <li><a href="/rooms/new">Create Room</a></li>
                     {{if .user}}
-                        <li class=""><a href="/">{{.user.Name}}</a></li>
-                        <li class=""><a href="{{url "Sessions.Destroy"}}">logout</a></li>
+                        <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-user"></i>{{.user.Name}}<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Settings</a></li>
+                            <li class="divider"></li>
+                            <li class=""><a href="{{url "Sessions.Destroy"}}">Logout</a></li>
+                        </ul>
+                        </li>
                     {{else}}
                         <li class=""><a href="/sessions/new">signin</a></li>
                         <li class=""><a href="/user/sign_up">signup</a></li>
