--- a/app/views/Rooms/New.html
+++ b/app/views/Rooms/New.html
@@ -1,4 +1,48 @@
 {{set . "title" "new room"}}
 {{template "header.html" .}}
-<h1> room new</h1>
+<div class="row">
+    <div class="span6 offset3">
+        {{if .flash.error }}
+        <div class="alert alert-error">
+            {{.flash.error}}
+        </div>
+        {{end}}
+        <br />
+        <form class="form-horizontal" action="{{url "Rooms.Create"}}" method="post" accept-charset="utf-8">
+            <div class="control-group">
+                {{with $field := field "rf.RoomKey" .}}
+                <label class="control-label" for="inputEmail">room id</label>
+                <div class="controls">
+                    <input type="text" id="inputName" placeholder="roomid" name="{{$field.Name}}" value="{{$field.Flash}}">
+                    <span class="error">{{$field.Error}}</span>
+                </div>
+                {{end}}
+            </div>
+            <div class="control-group">
+                {{with $field := field "rf.Title" .}}
+                <label class="control-label" for="inputEmail">title </label>
+                <div class="controls">
+                    <input type="text" id="inputEmail" placeholder="title" name="{{$field.Name}}" value="{{$field.Flash}}">
+                    <span class="error">{{$field.Error}}</span>
+                </div>
+                {{end}}
+            </div>
+            <div class="control-group">
+                {{with $field := field "rf.Desc" .}}
+                <label class="control-label" for="inputEmail">desc</label>
+                <div class="controls">
+                    <textarea rows=6 id="inputEmail" placeholder="Desc" name="{{$field.Name}}">{{$field.Flash}}</textarea>
+                    <span class="error">{{$field.Error}}</span>
+                </div>
+                {{end}}
+            </div>
+            <div class="control-group">
+                <div class="controls">
+                    <button type="submit" class="btn">Create Room</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
 {{template "footer.html" .}}
