--- a/app/views/share/navbar.html
+++ b/app/views/share/navbar.html
@@ -10,7 +10,7 @@
             <div class="nav-collapse collapse">
                 <ul class="nav">
                     <li class="active"><a href="/">Home</a></li>
-                    <li><a href="/rooms">Room</a></li>
+                    <li><a href="/rooms">Rooms</a></li>
                 </ul>
                 <ul class="nav pull-right">
                     <li><a href="/rooms/new">Create Room</a></li>
