--- a/app/views/Rooms/Index.html
+++ b/app/views/Rooms/Index.html
@@ -1,37 +1,39 @@
 {{template "header.html" .}}
-<div class="row">
-    {{range .rooms}}
-    <div class="span3" id="room-{{.Id}}">
-        <div class="room">
-            <div class="room-header">
-                <a href="/r/{{.RoomKey}}">{{.Id}} | {{.Title}} {{if eq .Private true}}<i class="icon-lock"></i> {{end}} </a>
-            </div>
-            <div class="room-body">
-                {{.Description}}
-            </div>
-            <div class="room-footer">
+<div class="container">
+    <div class="row">
+        {{range .rooms}}
+        <div class="span3" id="room-{{.Id}}">
+            <div class="room">
+                <div class="room-header">
+                    <a href="/r/{{.RoomKey}}">{{.Id}} | {{.Title}} {{if eq .Private true}}<i class="icon-lock"></i> {{end}} </a>
+                </div>
+                <div class="room-body">
+                    {{.Description}}
+                </div>
+                <div class="room-footer">
+                </div>
             </div>
         </div>
+        {{end}} 
     </div>
-    {{end}} 
-</div>
 
-<div class="pagination">
-    <ul class="prev">
-        {{if eq .p 1 }} 
+    <div class="pagination">
+        <ul class="prev">
+            {{if eq .p 1 }} 
             <li class="prev disabled"> <a href="#">← prev</a></li>
-        {{else}}
+            {{else}}
             <li class="prev "> <a href="/rooms?p={{minus .p 1}}">← prev</a></li>
-        {{end}}
+            {{end}}
 
-    </ul>
+        </ul>
 
-    <ul class="next">
-        {{if less .p .allPage }}
+        <ul class="next">
+            {{if less .p .allPage }}
             <li class="next"><a rel="next" href="/rooms?p={{add .p 1}}">next →</a></li>
-        {{else}}
+            {{else}}
             <li class="disabled"><a rel="next" href="#">next →</a></li>
-        {{end}}
-    </ul>
+            {{end}}
+        </ul>
+    </div>
 </div>
 {{template "footer.html" .}}
