--- a/app/views/Rooms/New.html
+++ b/app/views/Rooms/New.html
@@ -1,5 +1,6 @@
 {{set . "title" "new room"}}
 {{template "header.html" .}}
+<div class="container">
 <div class="row">
     <div class="span6 offset3">
         {{if .flash.error }}
@@ -48,6 +49,7 @@
             </div>
         </form>
     </div>
+</div>
 </div>
 
 {{template "footer.html" .}}
