--- a/app/views/Rooms/Show.html
+++ b/app/views/Rooms/Show.html
@@ -35,5 +35,5 @@
         </div>
     </div>
 </div>
-
+<script src="/public/js/app.js" type="text/javascript" charset="utf-8"></script>
 {{template "footer.html" .}}
