--- a/app/views/Rooms/Show.html
+++ b/app/views/Rooms/Show.html
@@ -10,11 +10,11 @@
         </div>
         <div class="span3 chat-sidebar">
             <h2>
-                <span class="room-title"> chatting </span>
+                <span class="room-title"> {{.room.Title}}</span>
                 <span class="room-star"> <i class="icon-star"></i> </span>
             </h1>
             <div class="room-info well">
-                欢迎前来扯蛋！ 工作之余，扯扯蛋也是不错的选择哦
+                {{.room.Description}}
             </div>
         </div>
     </div>
@@ -26,7 +26,7 @@
                     <img src="http://www.gravatar.com/avatar/2b7ee16fdd2c0af957187da43715fa93?s=64&d=identicon&r=PG" alt="" />
                 </div>
                 <div class="chat-form">
-                    <textarea rows="3"></textarea>
+                    <textarea rows="3" id="chat-form"></textarea>
                     <button class="btn btn-mini" id="sayit-button" >send</button>
                 </div>
                 <div class="chat-help">
