--- a/app/views/share/navbar.html
+++ b/app/views/share/navbar.html
@@ -16,7 +16,7 @@
                     <li><a href="/rooms/new">Create Room</a></li>
                     {{if .user}}
                         <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-user"></i>{{.user.Name}}<b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-user"></i><span id="user-name">{{.user.Name}}</span><b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Home</a></li>
                             <li><a href="#">Settings</a></li>
