--- a/app/views/Rooms/Show.html
+++ b/app/views/Rooms/Show.html
@@ -16,6 +16,11 @@
             <div class="room-info well">
                 {{.room.Description}}
             </div>
+            <div class="userlist">
+                {{range .users}}
+                <span> {{.Name}}</span>
+                {{end}}
+            </div>
         </div>
     </div>
 
