--- a/app/views/header.html
+++ b/app/views/header.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="/public/css/custom.css">
     <link rel="shortcut icon" type="image/png" href="/public/images/favicon.png">
     <script src="/public/js/jquery-1.9.1.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/public/js/bootstrap-dropdown.js" type="text/javascript" charset="utf-8"></script>
     <!-- Le styles -->
     <style>
       body {
