--- a/app/views/share/navbar.html
+++ b/app/views/share/navbar.html
@@ -19,7 +19,8 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-user"></i><span id="user-name">{{.user.Name}}</span><b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Home</a></li>
-                            <li><a href="#">Settings</a></li>
+                            <li><a href="{{url "Users.EditSettings"}}">Settings</a></li>
+                            <li><a href="{{url "Users.MyRooms"}}">My Rooms</a></li>
                             <li class="divider"></li>
                             <li class=""><a href="{{url "Sessions.Destroy"}}">Logout</a></li>
                         </ul>
