--- a/app/views/share/navbar.html
+++ b/app/views/share/navbar.html
@@ -9,16 +9,16 @@
             <a class="brand" href="/">websocet</a>
             <div class="nav-collapse collapse">
                 <ul class="nav">
-                    <li class="active"><a href="/">Home</a></li>
-                    <li><a href="/rooms">Rooms</a></li>
+                    <li><a href="/" class="section">Home</a></li>
+                    <li><a href="/rooms" class="section">Rooms</a></li>
                 </ul>
                 <ul class="nav pull-right">
-                    <li><a href="/rooms/new">Create Room</a></li>
+                    <li><a href="/rooms/new" class="section">Create Room</a></li>
                     {{if .user}}
                         <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-user"></i><span id="user-name">{{.user.Name}}</span><b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Home</a></li>
+                            <li><a href="/">Home</a></li>
                             <li><a href="{{url "Users.EditSettings"}}">Settings</a></li>
                             <li><a href="{{url "Users.MyRooms"}}">My Rooms</a></li>
                             <li class="divider"></li>
@@ -34,3 +34,4 @@
         </div>
     </div>
 </div>
+
