--- a/app/views/Rooms/Show.html
+++ b/app/views/Rooms/Show.html
@@ -4,9 +4,6 @@
 <div class="container-fluid">
     <div class="row-fluid">
         <div class="span9 chat-main">
-            <div class="">
-                {{.roomkey}}
-            </div>
         </div>
         <div class="span3 chat-sidebar">
             <h2>
@@ -18,11 +15,7 @@
             <div class="userlist" id="userlist">
                 <ul>
                     {{range .users}}
-                        {{if .Avatar}}
-                            <li><img src="{{.Avatar}}"/>{{.Name}}</li>
-                        {{else}}
-                            <li><img src="/public/avatar/mini_default.png"/>{{.Name}}</li>
-                        {{end}}
+                        <li><img src="{{.Avatar}}"/> <span>{{.Name}}</span></li>
                     {{end}}
                 </ul>
             </div>
@@ -33,7 +26,7 @@
         <div class="span12">
             <div class="chat-area navbar-fixed-bottom">
                 <div class="avatar">
-                    <img src="http://www.gravatar.com/avatar/2b7ee16fdd2c0af957187da43715fa93?s=64&d=identicon&r=PG" alt="" />
+                    <img src="{{.userAvatar}}" alt="" />
                 </div>
                 <div class="chat-form">
                     <textarea rows="3" id="chat-form"></textarea>
