--- a/app/views/Users/EditSettings.html
+++ b/app/views/Users/EditSettings.html
@@ -15,6 +15,8 @@
             </div>
             {{end}}
 
+            <br>
+
             <form accept-charset="UTF-8" action="{{url "Users.SaveSettings"}}" class="form-horizontal" method="post">
                 <div class="control-group">
                     <label class="control-label" for="user_nickname">Name:</label>
@@ -61,7 +63,7 @@
                 </div>
             </form>
 
-            <div class="box">
+          <!--   <div class="box">
                 <div class="box-header"> Avatar: </div>
                 <form accept-charset="UTF-8" action="{{url "Users.Avatar"}}" class="form-horizontal" enctype="multipart/form-data"  method="post" >
                     <div class="control-group">
@@ -81,15 +83,15 @@
                     <div class="control-group">
                         <label class="control-label" for="user_avatar">chose pic:</label>
                         <div class="controls">
-                            <input id="user_avatar" name="user" type="file">
+                            <input id="user_avatar" name="file" type="file">
                         </div>
                     </div>
                     <div class="form-actions">
                         <input class="btn btn-small btn-primary" name="commit" type="submit" value="上传新头像">
                     </div>
                 </form>
+            </div> -->
 
-            </div>
             <div class="box">
                 <div class="box-header">
                     Change Passwd:
