--- a/app/views/Rooms/Show.html
+++ b/app/views/Rooms/Show.html
@@ -3,8 +3,32 @@
 
 <div class="container-fluid">
     <div class="row-fluid">
-        <div class="span9 chat-main">
+        <div class="span3 roomlist">
+            <h2>rooms</h2>
+            <ul>
+                {{range .rooms}}
+                    <li><a href="/r/{{.RoomKey}}" target="_blank">{{.Title}}</a></li>
+                {{end}}
+            </ul>
         </div>
+
+        <div class="span6 well">
+            <div class="chat-main">
+            </div>
+
+            <div class="chat-area">
+                <div class="avatar">
+                    <img src="{{.userAvatar}}" alt="" />
+                </div>
+                <div class="chat-form">
+                    <textarea rows="3" id="chat-form"></textarea>
+                    <button class="btn btn-mini" id="sayit-button" >send</button>
+                </div>
+                <div class="chat-help">
+                </div>
+            </div>
+        </div>
+
         <div class="span3 chat-sidebar">
             <h2>
                 <span class="room-title"> {{.room.Title}}</span>
@@ -22,6 +46,7 @@
         </div>
     </div>
 
+    <!--
     <div class="row-fluid">
         <div class="span12">
             <div class="chat-area navbar-fixed-bottom">
@@ -38,5 +63,6 @@
         </div>
     </div>
 </div>
+-->
 <script src="/public/js/app.js" type="text/javascript" charset="utf-8"></script>
 {{template "footer.html" .}}
