fix recent user

--- a/app/views/Rooms/Index.html
+++ b/app/views/Rooms/Index.html
@@ -2,13 +2,13 @@
 <div class="container">
     <div class="row">
         {{range .roomLists}}
-        <div class="span3" id="room-{{.Room.Id}}">
+        <div class="span3" id="room-{{.Id}}">
             <div class="room">
                 <div class="room-header">
-                    <a href="/r/{{.Room.RoomKey}}">{{.Room.Id}} | {{.Room.Title}} {{if eq .Room.Private true}}<i class="icon-lock"></i> {{end}} </a>
+                    <a href="/r/{{.RoomKey}}">{{.Id}} | {{.Title}} {{if eq .Private true}}<i class="icon-lock"></i> {{end}} </a>
                 </div>
                 <div class="room-body">
-                    {{.Room.Description}}
+                    {{.Description}}
                 </div>
                 <div class="room-recentusers">
                     {{range .RecentUsers}}
