user show profile

--- a/app/views/Rooms/Index.html
+++ b/app/views/Rooms/Index.html
@@ -12,7 +12,7 @@
                 </div>
                 <div class="room-recentusers">
                     {{range .RecentUsers}}
-                    <a href=""> <img src="{{.Avatar}}" alt="" /> </a>
+                    <a href="/user/{{.Name}}/profile"> <img src="{{.Avatar}}" alt="" /> </a>
                     {{end}}
                 </div>
                 <div class="room-footer">
