--- a/app/views/Application/Index.html
+++ b/app/views/Application/Index.html
@@ -1,21 +1,69 @@
 {{set . "title" "Home"}}
 {{template "header.html" .}}
 
+
 <div class="container">
-    <h1>Application Is Ready</h1>
+<h3>Join and chating...</h3>
+    <div class="row">
+        <div class="span6 offset3">
+            {{if .flash.error }}
+            <div class="alert alert-error">
+                {{.flash.error}}
+            </div>
+            {{end}}
 
-    {{if .flash.error }}
-    <div class="alert alert-error">
-        {{.flash.error}}
-    </div>
-    {{end}}
+            {{if .flash.success }}
+            <div class="alert alert-success">
+                {{.flash.success}}
+            </div>
+            {{end}}
+            <br />
+            <form class="form-horizontal" action="{{url "Users.Create"}}" method="post" accept-charset="utf-8">
+                <div class="control-group">
+                    {{with $field := field "userform.Name" .}}
+                    <label class="control-label" for="inputName">Name</label>
+                    <div class="controls">
+                        <input type="text" id="inputName" placeholder="Name" name="{{$field.Name}}" value="{{$field.Flash}}">
+                        * <span class="error">{{$field.Error}}</span>
+                    </div>
+                    {{end}}
+                </div>
+                <div class="control-group">
+                    {{with $field := field "userform.Email" .}}
+                    <label class="control-label" for="inputEmail">Email</label>
+                    <div class="controls">
+                        <input type="text" id="inputEmail" placeholder="Email" name="{{$field.Name}}" value="{{$field.Flash}}">
+                        * <span class="error">{{$field.Error}}</span>
+                    </div>
+                    {{end}}
+                </div>
+                <div class="control-group">
+                    {{with $field := field "userform.Password" .}}
+                    <label class="control-label" for="inputPassword">Password</label>
+                    <div class="controls">
+                        <input type="password" id="inputPassword" placeholder="Password" name="{{$field.Name}}" value="{{$field.Flash}}">
+                        * <span class="error">{{$field.Error}}</span>
+                    </div>
+                    {{end}}
+                </div>
 
-    {{if .flash.success }}
-    <div class="alert alert-success">
-        {{.flash.success}}
+                <div class="control-group">
+                    {{with $field := field "userform.RepeatPassword" .}}
+                    <label class="control-label" for="inputPassword">Repeat Password</label>
+                    <div class="controls">
+                        <input type="password" id="inputPassword" placeholder="Password repeat" name="{{$field.Name}}" value="{{$field.Flash}}">
+                        * <span class="error">{{$field.Error}}</span>
+                    </div>
+                    {{end}}
+                </div>
+                <div class="control-group">
+                    <div class="controls">
+                        <button type="submit" class="btn">Sign Up</button>
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
-    {{end}}
 </div>
-
 {{template "footer.html" .}}
 
