--- a/app/views/Rooms/Show.html
+++ b/app/views/Rooms/Show.html
@@ -16,7 +16,7 @@
             <div class="chat-main">
                 recent message:
                 {{range .latestMessages}}
-                [{{.UserName}}]:{{.Text}} <br />
+                [{{.UserName}}] {{.Text}} <br />
                 {{end}}
                 new message: <br />
             </div>
