--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -10,7 +10,7 @@ body{
     height: 150px;
     margin-bottom: 20px;
     border: 1px solid #DDD;
-    background-color: #fff;
+    background-color: #fdfdfd;
     -moz-border-radius: 3px;
     border-radius: 3px;
     -moz-box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15);
@@ -19,12 +19,11 @@ body{
     padding: 10px;
 }
 
-.room span {
+.room .heart{
     float: right;
 }
 
 .chat-main, .chat-sidebar, .roomlist {
-    height: auto;
     border: 1px solid #DDD;
     background-color: #fff;
     -moz-border-radius: 3px;
@@ -41,7 +40,9 @@ body{
 }
 
 .chat-main {
-    height: auto;
+    height: 330px;
+    overflow: scroll;
+    overflow-x: hidden;
     margin-bottom: 10px;
 }
 
@@ -96,3 +97,18 @@ body{
 .message-avatar img {
     width: 15px;
 }
+
+::-webkit-scrollbar { 
+    width: 3px; 
+    height: 3px;
+}   
+
+::-webkit-scrollbar-track-piece {
+    background-color: #fff;
+}
+
+::-webkit-scrollbar-thumb{
+    height: 30px;
+    background-color: #08c;
+    -webkit-border-radius: 4px;
+} 
