--- a/app/views/Rooms/Show.html
+++ b/app/views/Rooms/Show.html
@@ -1,4 +1,7 @@
 {{set . "title" .roomkey}}
+
+{{append . "moreScripts" "/js/app.js"}}
+
 {{template "header.html" .}}
 
 <div class="container-fluid">
@@ -53,23 +56,5 @@
         </div>
     </div>
 
-    <!--
-    <div class="row-fluid">
-        <div class="span12">
-            <div class="chat-area navbar-fixed-bottom">
-                <div class="avatar">
-                    <img src="{{.userAvatar}}" alt="" />
-                </div>
-                <div class="chat-form">
-                    <textarea rows="3" id="chat-form"></textarea>
-                    <button class="btn btn-mini" id="sayit-button" >send</button>
-                </div>
-                <div class="chat-help">
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
--->
-<script src="/public/js/app.js" type="text/javascript" charset="utf-8"></script>
+
 {{template "footer.html" .}}
