--- a/app/views/header.html
+++ b/app/views/header.html
@@ -22,6 +22,12 @@
             });
         });
     </script>
+    {{range .moreStyles}}
+        <link rel="stylesheet" type="text/css" href="/public/{{.}}">
+    {{end}}
+    {{range .moreScripts}}
+        <script src="/public/{{.}}" type="text/javascript" charset="utf-8"></script>
+    {{end}}
 
     <style>
       body {
