--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -112,3 +112,19 @@ body{
     background-color: #08c;
     -webkit-border-radius: 4px;
 } 
+.box {
+    background: white;
+    border-radius: 3px;
+    box-shadow: 0px 1px 5px rgba(0,0,0,0.15);
+    border-bottom: 1px solid #E2E2E9;
+    margin-bottom: 20px;
+}
+
+.box .cell, .box .box-header {
+    padding: 10px;
+    border-bottom: 1px solid #F0F0F0;
+}
+#wrap {
+    background-color: #E0E0E0;
+    padding-top: 20px;
+}
